--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install ruff pyright
       - name: Ruff
-        run: ruff .
+        run: ruff check .
       - name: Pyright
         run: pyright
